--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,3 +27,9 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+
+MYAPP_UPLOAD_STORE_FILE=personal-artist-app-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=personal-artist-app-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=1TP3al
+MYAPP_UPLOAD_KEY_PASSWORD=yU78tH
